# tekgin

./: .clang-format  .clang-tidy  .clangd  CMakeLists.txt  Doxyfile  README.md  build.sh  design.md  main.cpp  meson.build  scope.md
include/combat/: attacks.hpp
include/core/: character_base.hpp
include/core/interface/: saveable.hpp
include/tekgin/combat/: attacks.hpp  elements.hpp
include/tekgin/core/: character_base.hpp  enemy.hpp
src/: constants.cppm  meson.build  paths.cppm  tekgin.cppm  version.cppm
src/combat/: attacks.cpp  attacks.cppm  attacks.hpp  combat.cppm  elements.cppm  elements.hpp  enemy.cpp  enemy.cppm  status_effects.cpp  status_effects.cppm
src/core/: character.cpp  character.cppm  character_base.cpp  character_base.cppm  character_base.hpp  core.cppm  enemy.cpp  enemy.cppm  enemy.hpp  engine.cpp  engine.cppm
src/core/interface/: saveable.hpp
src/core/interfaces/: saveable.cppm
src/util/: logging.cpp  logging.cppm  util.cppm
src/world/: map.cpp  map.cppm  world.cppm
